<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_services">Cost of Services</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="average_15">Average 15</string>
    <string name="not_good">Not good</string>
    <string name="averaage_15">Average (15%)</string>
    <string name="lund_tha_10">Lund tha (10%)</string>
    <string name="round_up_tip">Round up Tip?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>