<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_store"
        app:layout_constraintTop_toTopOf="@+id/cost_of_services"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/cost_of_services"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_services"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/cost_of_services"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="@+id/icon_cost_of_service"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/service_questions"
        app:layout_constraintBottom_toBottomOf="@+id/service_questions"/>

    <TextView
        android:id="@+id/service_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        style="@style/Widget.TipTime.TextView"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/icon_service_question"
        app:layout_constraintTop_toBottomOf="@id/cost_of_services"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tip_options"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/service_questions"
        app:layout_constraintTop_toBottomOf="@id/service_questions">
        
        <RadioButton
            android:id="@+id/Option_best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"/>
        <RadioButton
            android:id="@+id/Option_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/averaage_15"/>
        <RadioButton
            android:id="@+id/Option_worst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lund_tha_10"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/icon_round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_round_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/round_up_option"
        app:layout_constraintBottom_toBottomOf="@+id/round_up_option"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/round_up_option"
        android:text="@string/round_up_tip"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@id/tip_options"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/calculate"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_up_option"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tip_result"
        tools:text="Tip Amount: $10"
        style="@style/Widget.TipTime.TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate"/>

</androidx.constraintlayout.widget.ConstraintLayout>